--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,16 +56,27 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: |
+      # For Multiarchitecture Support
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        
+      - name: Build and push multi-architecture images (arm64/amd64)
+        run: |
           IMG="ghcr.io/${{ github.repository }}"
           IMG=${IMG@L} # lower-case the image
 
           echo "Building image $IMG with version ${{ env.version }}"
 
-          docker build \
+          docker buildx build \
+            --platform linux/amd64,linux/arm64 \
+            --provenance=false \
+            --sbom=false \
             --tag $IMG:${{ env.version }} \
             --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
             --tag $IMG:${{ env.version_major }}.latest \
             --tag $IMG:latest \
+            --push \
             .
-          docker push --all-tags $IMG
