--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
         
       - name: Build and push multi-architecture images (arm64/amd64)
+        env:
+          BUILD_SECRET: ${{ secrets.GH_TOKEN }}
         run: |
           IMG="ghcr.io/${{ github.repository }}"
           IMG=${IMG@L} # lower-case the image
@@ -72,9 +74,10 @@ jobs:
 
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
+            --secret id=github_token,env=BUILD_SECRET \
             --provenance=false \
             --sbom=false \
-            --tag $IMG:${{ env.version }} \
+            --tag $IMG:${{ env.version }}\
             --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
             --tag $IMG:${{ env.version_major }}.latest \
             --tag $IMG:latest \
