--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,7 @@ jobs:
         
       - name: Build and push multi-architecture images (arm64/amd64)
         env:
-          BUILD_SECRET="${{ secrets.GH_TOKEN }}"
+          BUILD_SECRET: ${{ secrets.GH_TOKEN }}
         run: |
           IMG="ghcr.io/${{ github.repository }}"
           IMG=${IMG@L} # lower-case the image
@@ -77,7 +77,7 @@ jobs:
             --secret id=github_token,env=BUILD_SECRET \
             --provenance=false \
             --sbom=false \
-            --tag $IMG:${{ env.version }} \
+            --tag $IMG:${{ env.version }}\
             --tag $IMG:${{ env.version_major }}.${{ env.version_minor }}.latest \
             --tag $IMG:${{ env.version_major }}.latest \
             --tag $IMG:latest \
