--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,7 +67,7 @@ jobs:
         env:
           BUILD_SECRET: ${{ secrets.GH_TOKEN }}
         run: |
-          IMG="ghcr.io/${{ github.repository }}"
+          IMG="ghcr.io/doda25-team16/sms-app"
           IMG=${IMG@L} # lower-case the image
 
           echo "Building image $IMG with version ${{ env.version }}"
